Uploaded correct file
Fixed wrong upload

--- a/printer.cfg
+++ b/printer.cfg
@@ -1,9 +1,225 @@
-[virtual_sdcard]
-path: /home/pi/gcode_files
+[stepper_x]
+step_pin: ar54
+dir_pin: ar55
+enable_pin: !ar38
+microsteps: 16
+rotation_distance: 40
+endstop_pin: ^!ar3
+position_endstop: 0
+position_max: 310
+homing_speed: 40.0
 
-[pause_resume]
+[stepper_y]
+step_pin: ar60
+dir_pin: ar61
+enable_pin: !ar56
+microsteps: 16
+rotation_distance: 40
+endstop_pin: ^!ar14
+position_endstop: 0
+position_max: 310
+homing_speed: 40
+homing_positive_dir: false
 
-[display_status]
+[stepper_z]
+step_pin: ar46
+dir_pin: !ar48
+enable_pin: !ar62
+microsteps: 16
+rotation_distance: 8
+endstop_pin: probe:z_virtual_endstop
+position_min: -3
+position_max: 400
+homing_speed: 30
+second_homing_speed: 1
+
+[stepper_z1]
+step_pin: ar36
+dir_pin: !ar34
+enable_pin: !ar30
+microsteps: 16
+rotation_distance: 8
+
+[extruder]
+step_pin: ar26
+dir_pin: ar28
+enable_pin: !ar24
+microsteps: 16
+rotation_distance: 7
+nozzle_diameter: 0.400
+filament_diameter: 1.750
+heater_pin: ar10
+sensor_type: EPCOS 100K B57560G104F
+sensor_pin: analog13
+min_extrude_temp: 190
+min_temp: 5
+max_temp: 300
+max_extrude_only_distance: 500
+max_extrude_cross_section: 2.0
+
+[heater_bed]
+heater_pin: ar8
+sensor_type: EPCOS 100K B57560G104F
+sensor_pin: analog14
+min_temp: 5
+max_temp: 150
+control = pid
+pid_kp = 244.21
+pid_ki = 45.87
+pid_kd = 325.08
+
+#Klipper PID Autotune
+# pid_kp = 49.934
+# pid_ki = 0.354
+# pid_kd = 1762.054
+
+[fan]
+pin: ar9
+kick_start_time: 0.500
+
+[heater_fan my_nozzle_fan]
+pin:ar7
+heater: extruder
+heater_temp: 50.0
+fan_speed: 1.0
+
+[mcu]
+#make sure this reflects your serial port you found when flashing klipper																	 
+serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
+
+[printer]
+kinematics: cartesian
+max_velocity: 200
+max_accel: 3000
+max_z_velocity: 50
+max_z_accel: 100
+square_corner_velocity: 5 
+
+[bltouch]
+sensor_pin: ar19 
+control_pin: ar11 
+x_offset:28
+y_offset:-33
+speed:10
+samples:1
+samples_result:average
+set_output_mode: 5V
+probe_with_touch_mode: true
+stow_on_each_sample: false
+
+[safe_z_home]
+home_xy_position: 122,183
+speed: 100
+z_hop: 20               
+z_hop_speed: 20
+
+[bed_mesh]
+speed: 800
+mesh_min: 30,30
+mesh_max: 270,270
+probe_count: 5,5
+mesh_pps: 2,2
+algorithm: bicubic
+bicubic_tension: 0.2
+move_check_distance: 3.0
+split_delta_z: .010
+fade_start: 1.0 
+fade_end: 5.0
+
+[bed_screws]
+screw1: 55,55
+screw1_name: front left
+screw2: 255,55
+screw2_name: front right
+screw3: 255,255
+screw3_name: back right
+screw4: 55,255
+screw4_name: back left
+speed: 100.0
+
+
+[screws_tilt_adjust]
+screw1: 22,83
+screw1_name: front left
+screw2: 222,83
+screw2_name: front right
+screw3: 22,283
+screw3_name: back left
+screw4: 222,283
+screw4_name: back right
+speed: 100.0
+screw_thread: CW-M5
+
+
+#uncomment the following lines to use Z_TILT_ADJUST and uncomment G34 Macro to use G34
+#[z_tilt]
+#z_positions: 
+#     10,155
+#     270,155
+#
+#points: 
+#    10,155
+#    270,155
+#speed: 100
+#horizontal_move_z: 10
+
+
+[gcode_macro PAUSE]
+description: Pause the actual running print
+rename_existing: PAUSE_BASE
+gcode:
+    ##### set defaults #####
+    {% set x = params.X|default(230) %}      #edit to your park position
+    {% set y = params.Y|default(230) %}      #edit to your park position
+    {% set z = params.Z|default(10)|float %} #edit to your park position
+    {% set e = params.E|default(1) %}        #edit to your retract length
+    ##### calculate save lift position #####
+    {% set max_z = printer.toolhead.axis_maximum.z|float %}
+    {% set act_z = printer.toolhead.position.z|float %}
+    {% set lift_z = z|abs %}
+    {% if act_z < (max_z - lift_z) %}
+        {% set z_safe = lift_z %}
+    {% else %}
+        {% set z_safe = max_z - act_z %}
+    {% endif %}
+    ##### end of definitions #####
+    PAUSE_BASE
+    G91
+    {% if printer.extruder.can_extrude|lower == 'true' %}
+      G1 E-{e} F2100
+    {% else %}
+      {action_respond_info("Extruder not hot enough")}
+    {% endif %}
+    {% if "xyz" in printer.toolhead.homed_axes %}    
+      G1 Z{z_safe}
+      G90
+      G1 X{x} Y{y} F6000
+    {% else %}
+      {action_respond_info("Printer not homed")}
+    {% endif %}
+
+
+[gcode_macro RESUME]
+description: Resume the actual running print
+rename_existing: RESUME_BASE
+gcode:
+    ##### set defaults #####
+    {% set e = params.E|default(1) %} #edit to your retract length
+    #### get VELOCITY parameter if specified ####
+    {% if 'VELOCITY' in params|upper %}
+      {% set get_params = ('VELOCITY=' + params.VELOCITY)  %}
+    {%else %}
+      {% set get_params = "" %}
+    {% endif %}
+    ##### end of definitions #####
+    G91
+    {% if printer.extruder.can_extrude|lower == 'true' %}
+      G1 E{e} F2100
+    {% else %}
+      {action_respond_info("Extruder not hot enough")}
+    {% endif %}  
+    RESUME_BASE {get_params}
+
 
 [gcode_macro CANCEL_PRINT]
 description: Cancel the actual running print
@@ -12,59 +228,194 @@ gcode:
     TURN_OFF_HEATERS
     CANCEL_PRINT_BASE
 
-[gcode_macro PAUSE]
-description: Pause the actual running print
-rename_existing: PAUSE_BASE
-# change this if you need more or less extrusion
-variable_extrude: 1.0
+
+[gcode_macro HOMING]
 gcode:
-    ##### read E from pause macro #####
-    {% set E = printer["gcode_macro PAUSE"].extrude|float %}
-    ##### set park positon for x and y #####
-    # default is your max posion from your printer.cfg
-    {% set x_park = printer.toolhead.axis_maximum.x|float - 5.0 %}
-    {% set y_park = printer.toolhead.axis_maximum.y|float - 5.0 %}
-    ##### calculate save lift position #####
-    {% set max_z = printer.toolhead.axis_maximum.z|float %}
-    {% set act_z = printer.toolhead.position.z|float %}
-    {% if act_z < (max_z - 2.0) %}
-        {% set z_safe = 2.0 %}
-    {% else %}
-        {% set z_safe = max_z - act_z %}
-    {% endif %}
-    ##### end of definitions #####
-    PAUSE_BASE
-    G91
-    {% if printer.extruder.can_extrude|lower == 'true' %}
-      G1 E-{E} F2100
-    {% else %}
-      {action_respond_info("Extruder not hot enough")}
-    {% endif %}
-    {% if "xyz" in printer.toolhead.homed_axes %}
-      G1 Z{z_safe} F900
+     G28
+
+
+[gcode_macro G29]
+gcode:
+ BED_MESH_CLEAR
+ G28
+ BED_MESH_CALIBRATE
+ BED_MESH_PROFILE SAVE=x1
+ 
+#[gcode_macro G34]
+#gcode:
+#     G28
+#     Z_TILT_ADJUST		
+
+
+[gcode_macro G35]
+gcode:
+     G28
+     SCREWS_TILT_CALCULATE
+
+
+[gcode_macro START_PRINT]
+gcode:
+#Move to start position
+      G28 ; basic homing
+      G90 ; aboslute positioning
+      G1 X10 Y10 Z50 F5000.0 ;move to start position
+#Start bed heating
+      M140 S{BED_TEMP}
+#Set extruder temperature
+      M104 S{EXTRUDER_TEMP}
+#Wait for temperatures
+      M190 S{BED_TEMP}
+#Mesh level
+      G29
+#Prep extruder  
+      M109 S{EXTRUDER_TEMP}
+      G91 E25
+      G1 E20 F2700
+      G92 E0 ; reset extruder
+#Print test line
       G90
-      G1 X{x_park} Y{y_park} F6000
-    {% else %}
-      {action_respond_info("Printer not homed")}
-    {% endif %} 
-    
-[gcode_macro RESUME]
-description: Resume the actual running print
-rename_existing: RESUME_BASE
+      G1 X2 Y20 Z0.3 F5000.0 ; move to start-line position
+      G1 X2 Y200.0 Z0.3 F1500.0 E15 ; draw 1st line
+      G92 E0 ; reset extruder
+      G1 Z1.0 F3000 ; move z up little to prevent scratching of surface
+
+
+[gcode_macro END_PRINT]
 gcode:
-    ##### read E from pause macro #####
-    {% set E = printer["gcode_macro PAUSE"].extrude|float %}
-    #### get VELOCITY parameter if specified ####
-    {% if 'VELOCITY' in params|upper %}
-      {% set get_params = ('VELOCITY=' + params.VELOCITY)  %}
-    {%else %}
-      {% set get_params = "" %}
-    {% endif %}
-    ##### end of definitions #####
-    {% if printer.extruder.can_extrude|lower == 'true' %}
-      G91
-      G1 E{E} F2100
-    {% else %}
-      {action_respond_info("Extruder not hot enough")}
-    {% endif %}  
-    RESUME_BASE {get_params}
+ #Get Printer built volume dimensions
+        {% set X_MAX = printer.toolhead.axis_maximum.x|default(100)|float %}
+        {% set Y_MAX = printer.toolhead.axis_maximum.y|default(100)|float %}
+#Fix-up extruder
+        G91                                            
+        G1 E-2 F2700                                    
+        #G1 E-50 Z0.2 F7000 ; retract filament for exchange                        
+        G1 E-1.5 Z0.2 F5000
+        G1 X5 Y5 F6000                               
+        G1 Z10                                     
+        G90                                      
+#Present print
+        G1 Z{printer.toolhead.position.z + 50} F600
+        G1 X50 Y{Y_MAX} F6000
+#Turn off bed, extruder and fan
+        M106 S0                                      
+        M104 S0                                       
+        M140 S0                                
+#Disable Steppers
+        M84  
+
+
+[gcode_macro DISABLE_STEPPERS]
+gcode:
+#Disable Steppers
+        M84     
+
+
+[gcode_macro FILAMENT_CHANGE]
+gcode:
+#Homing
+        G28
+#Drive to parking position
+        G90
+    	G1 X150 Y10 Z200 F5000.0
+#Heat nozzle and wait for temp
+        M104 S200
+        M109 200
+#Push and release filament
+        G91 ;relative position
+        G1 E10 F1500.0
+        G1 E-50 F5000.0
+
+
+[display_status]
+
+[virtual_sdcard]
+path: ~/gcode_files
+
+[pause_resume]
+recover_velocity: 50.
+
+#[filament_switch_sensor my_sensor]
+#Move filament runout sensor from TFT to X+ endstop pin. Uncomment all but this line if you want to use this
+#pause_on_runout: False
+#runout_gcode: PAUSE
+#insert_gcode: RESUME
+#switch_pin: ar2
+
+# Arduino aliases for atmega2560/1280 (Arduino mega) boards
+[board_pins arduino-mega]
+aliases:
+    ar0=PE0, ar1=PE1, ar2=PE4, ar3=PE5, ar4=PG5,
+    ar5=PE3, ar6=PH3, ar7=PH4, ar8=PH5, ar9=PH6,
+    ar10=PB4, ar11=PB5, ar12=PB6, ar13=PB7, ar14=PJ1,
+    ar15=PJ0, ar16=PH1, ar17=PH0, ar18=PD3, ar19=PD2,
+    ar20=PD1, ar21=PD0, ar22=PA0, ar23=PA1, ar24=PA2,
+    ar25=PA3, ar26=PA4, ar27=PA5, ar28=PA6, ar29=PA7,
+    ar30=PC7, ar31=PC6, ar32=PC5, ar33=PC4, ar34=PC3,
+    ar35=PC2, ar36=PC1, ar37=PC0, ar38=PD7, ar39=PG2,
+    ar40=PG1, ar41=PG0, ar42=PL7, ar43=PL6, ar44=PL5,
+    ar45=PL4, ar46=PL3, ar47=PL2, ar48=PL1, ar49=PL0,
+    ar50=PB3, ar51=PB2, ar52=PB1, ar53=PB0, ar54=PF0,
+    ar55=PF1, ar56=PF2, ar57=PF3, ar58=PF4, ar59=PF5,
+    ar60=PF6, ar61=PF7, ar62=PK0, ar63=PK1, ar64=PK2,
+    ar65=PK3, ar66=PK4, ar67=PK5, ar68=PK6, ar69=PK7,
+    analog0=PF0, analog1=PF1, analog2=PF2, analog3=PF3, analog4=PF4,
+    analog5=PF5, analog6=PF6, analog7=PF7, analog8=PK0, analog9=PK1,
+    analog10=PK2, analog11=PK3, analog12=PK4, analog13=PK5, analog14=PK6,
+    analog15=PK7,
+    # Marlin adds these additional aliases
+    ml70=PG4, ml71=PG3, ml72=PJ2, ml73=PJ3, ml74=PJ7,
+    ml75=PJ4, ml76=PJ5, ml77=PJ6, ml78=PE2, ml79=PE6,
+    ml80=PE7, ml81=PD4, ml82=PD5, ml83=PD6, ml84=PH2,
+    ml85=PH7
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 22.004
+#*# pid_ki = 1.310
+#*# pid_kd = 92.417
+#*#
+#*# [bltouch]
+#*# z_offset = 3.148
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  0.140000, 0.057500, 0.052500, 0.085000, 0.142500
+#*# 	  0.097500, 0.020000, 0.020000, 0.045000, 0.122500
+#*# 	  0.082500, 0.012500, 0.012500, 0.042500, 0.135000
+#*# 	  0.172500, 0.052500, 0.030000, 0.025000, 0.107500
+#*# 	  0.170000, 0.062500, 0.042500, 0.047500, 0.132500
+#*# x_count = 5
+#*# y_count = 5
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 30.0
+#*# max_x = 270.0
+#*# min_y = 30.0
+#*# max_y = 270.0
+#*#
+#*# [bed_mesh x1]
+#*# version = 1
+#*# points =
+#*# 	  0.140000, 0.057500, 0.052500, 0.085000, 0.142500
+#*# 	  0.097500, 0.020000, 0.020000, 0.045000, 0.122500
+#*# 	  0.082500, 0.012500, 0.012500, 0.042500, 0.135000
+#*# 	  0.172500, 0.052500, 0.030000, 0.025000, 0.107500
+#*# 	  0.170000, 0.062500, 0.042500, 0.047500, 0.132500
+#*# x_count = 5
+#*# y_count = 5
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 30.0
+#*# max_x = 270.0
+#*# min_y = 30.0
+#*# max_y = 270.0
+#*#
+#*# [heater_bed]
